Fix leaderboard width on mobile

--- a/client/src/styles/Leaderboard.module.css
+++ b/client/src/styles/Leaderboard.module.css
@@ -58,6 +58,7 @@
   }
   .container {
     min-height: 270px;
+    min-width: 360px;
   }
 
   .leaderboard {
